--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,7 @@ python:
 before_install:
   - sudo apt-get install swig
 install: pip install --allow-all-external -r requirements.txt
-script: python tests/test.py unit
+script: python --cov-report xml --cov tests/test.py unit --junit-xml=shippable/testresults/results.xml
+before_script:
+  mkdir -p shippable/codecoverage shippable/testresults
+
