--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,5 @@ install:
   - pip install nose-cov
 script: 
   - python tests/test.py 
-  - nosetests --cov-report xml -o shippable/codecoverage/coverage.xml tests/*.py
+ # - nosetests --cov-report xml -o shippable/codecoverage/coverage.xml tests/*.py
+  - nosetests --with-coverage --cover-erase --cover-package= ./tests/*/*.py --cover-xml
