--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,11 @@ before_script: mkdir -p shippable/codecoverage shippable/testresults
 install:
   - pip install --allow-all-external -r requirements.txt
   - pip install nose-cov
-script: 
-  - python tests/test.py 
+#script: 
+ # - python tests/test.py 
  # - nosetests --cov-report xml -o shippable/codecoverage/coverage.xml tests/*.py
-  - nosetests --with-coverage --cover-erase --cover-package= ./tests/*/*.py --cover-xml
+  #- nosetests --with-coverage --cover-erase --cover-package= ./tests/*/*.py --cover-xml
+script:
+  - nosetests tests/integration/gs/*.py --with-xunit --xunit-file=shippable/testresults/nosetests.xml
+  - coverage run --branch python/sample.py
+  - coverage xml -o shippable/codecoverage/coverage.xml tests/integration/gs/*.py
