--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,17 @@
 language: python
 python:
-  - "2.6"
   - "2.7"
 before_install:
   - sudo apt-get install swig
-install: pip install --allow-all-external -r requirements.txt
-script: python --cov-report xml --cov tests/test.py unit --junit-xml=shippable/testresults/results.xml
+install: 
+  - pip install --allow-all-external -r requirements.txt
+  - sudo pip install coverage
+
+script: 
+  - nosetests tests/integration/gs/*.py --with-xunit --xunit-file=shippable/testresults/nosetests.xml
+  - coverage run --branch tests/integration/gs/*.py
+  - coverage xml -o shippable/codecoverage/coverage.xml tests/integration/gs/*.py
+ #python --cov-report xml --cov tests/test.py unit --junit-xml=shippable/testresults/results.xml
 before_script:
   mkdir -p shippable/codecoverage shippable/testresults
 
