--- a/.travis.yml
+++ b/.travis.yml
@@ -13,5 +13,5 @@ script:
   - coverage xml -o shippable/codecoverage/coverage.xml tests/integration/gs/*.py
  #python --cov-report xml --cov tests/test.py unit --junit-xml=shippable/testresults/results.xml
 before_script:
-  mkdir -p shippable/codecoverage shippable/testresults
+  -  mkdir -p shippable/codecoverage shippable/testresults
 
