--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,9 @@ install:
   - sudo pip install coverage
 
 script: 
-  - nosetests tests/unit/*/*.py --with-xunit --xunit-file=shippable/testresults/nosetests.xml
-  - coverage run --branch tests/unit/*/*.py #tests/integration/gs/*.py
-  - coverage xml -o shippable/codecoverage/coverage.xml tests/unit/*/*.py # tests/integration/gs/*.py
+  - nosetests tests/*/*/*.py --with-xunit --xunit-file=shippable/testresults/nosetests.xml
+  - coverage run -m  tests/*/*/*.py #tests/integration/gs/*.py
+  - coverage xml -o shippable/codecoverage/coverage.xml tests/*/*/*.py # tests/integration/gs/*.py
  #python --cov-report xml --cov tests/test.py unit --junit-xml=shippable/testresults/results.xml
 before_script:
   -  mkdir -p shippable/codecoverage shippable/testresults
