--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,6 @@ notifications:
      email:
          recipients:
              - vidyac.raghav@gmail.com
-             
+             - vidya@shippable.com
          on_success: change
          on_failure: always
